# cookiecutter-ludditelabs-py

./: .gitignore  .travis.yml  README.md  README.rst  bitbucket-pipelines.yml  cookiecutter.json  pyproject.toml  requirements.txt  setup.cfg  setup.py
hooks/: post_gen_project.py  pre_gen_project.py
tests/: test_generate.py
{{cookiecutter.package_name}}/: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.rst  bitbucket-pipelines.yml  setup.cfg  setup.py  tox.ini
{{cookiecutter.package_name}}/docs/: conf.py  index.rst  overview.rst
{{cookiecutter.package_name}}/docs/_static/: theme_overrides.css
{{cookiecutter.package_name}}/requirements/: app-dev.txt  base.txt  dev.txt  dev.yml  production.yml  test.txt  test.yml
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  appconfig.py  cli.py  settings.py
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/utils/: config.py  logging.py
{{cookiecutter.package_name}}/tests/: test_simple.py
{{cookiecutter.project_slug}}/: .coveragerc  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  bitbucket-pipelines.yml  pyproject.toml
{{cookiecutter.project_slug}}/docs/: conf.py  index.rst  overview.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __main__.py  cli.py  config.py  config_loader.py  utils.py
{{cookiecutter.project_slug}}/tests/: conftest.py  settings.env  test_simple.py
