[tool.poetry]
name = "cookiecutter-ludditelabs-py"
version = "0.2.0"
description = "Cookiecutter template for a python package."
authors = ["Sergey Kozlov <dev@ludditelabs.io>"]
repository = "https://github.com/LudditeLabs/cookiecutter-ludditelabs-py"
readme = "README.md"
keywords = ["cookiecutter", "template", "poetry", "ludditelabs"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
packages = [
#  {include = "cookiecutter_ludditelabs_py"}
]
include = [
  "{{cookiecutter.project_name}}/**/*",
  "cookiecutter.json",
  "hooks/*"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cookiecutter = "^2.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pre-commit = "^3.6.0"


[tool.poetry.group.test.dependencies]
cookiecutter = "^2.5.0"
pytest-cookies = "^0.7.0"
ruff = "^0.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
select = [
  "E",  # pycodestyle
  "F",  # pyflakes
  "I",  # isort
]
